hphp/hack/test/typecheck/compile_test_cast.php.exp
File "compile_test_cast.php", line 28, characters 12-14:
Encountered unexpected token '$x3'. (Parsing[1002])
